Fixes header align on about and increases mobile Nabar sliding speed.

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -5,6 +5,6 @@
     align-content: flex-start;
 }
 
-.about-content article h1 {
+.about-content h1 {
     text-align: center;
 }
